[project]
name = "vidtoolz-add-sound"
version = "0.0.1"
description = "Add sound to a video"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "vidtoolz",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-add-sound"
Changelog = "https://github.com/sukhbinder/vidtoolz-add-sound/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-add-sound/issues"
CI = "https://github.com/sukhbinder/vidtoolz-add-sound/actions"

[project.entry-points."vidtoolz_plugins"]
addsound = "vidtoolz_add_sound:addsound_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
